--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         </div>
 
         <div class="text-container">
-            <textarea id="textInput" style="width: 80%; height: 90%;">
+            <textarea id="textInput" style="width: 80%; height: 90%;"> </textarea>
         </div>
 
-        <!-- <script>
+        <script>
 
             const destination = document.getElementById("textInput");
             navigator.clipboard.readText().then((clipText) => {
@@ -54,7 +54,7 @@
                 console.log(err)
             })
     
-        </script> -->
+        </script>
 
     </body>
 </html>
