--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                height: 20vh; /* This ensures the container takes up the full viewport height */
+                /* height: 20vh; This ensures the container takes up the full viewport height */
                 /* background-color: rgb(var(--bs-secondary-bg-rgb)); */
                 border-radius: 20px;
             }
@@ -19,7 +19,7 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                height: 80vh; /* This ensures the container takes up the full viewport height */
+                /* height: 80vh; This ensures the container takes up the full viewport height */
                 /* background-color: rgb(var(--bs-secondary-bg-rgb)); */
                 border-radius: 20px;
             }
@@ -33,16 +33,16 @@
     <script src="./main.js"></script>
     <body>
 
-        <div class="button-container">
+        <!-- <div class="button-container"> -->
             <button type="button" class="btn btn-primary" onclick="scramble()">Scramble</button>
             <button type="button" class="btn btn-success" onclick="copy()">Copy</button>
             <button type="button" class="btn btn-warning" onclick="clearText()">Clear</button>
 
-        </div>
+        <!-- </div> -->
 
-        <div class="text-container">
+        <!-- <div class="text-container"> -->
             <textarea id="textInput" style="width: 80%; height: 90%;"> </textarea>
-        </div>
+        <!-- </div> -->
 
         <script>
 
